[package]
name = "rusty-book-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["macros"] }
sqlx = { version = "0.8.5", features = ["chrono", "macros", "migrate", "postgres", "runtime-tokio", "uuid"] }
tokio = { version = "1.45.0", features = ["full"] }

[dev-dependencies]
rstest = "0.25.0"
